# morse-code-japanese

./: Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: validate.yml
src/: lib.rs
